--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="btn-group">
               <a href="#contact" class="btn">Hire</a>
-              <a href="https://drive.google.com/file/d/1qee0ynZpobzA5__GC2Ua8o8mlH3mJFwN/view?usp=drive_link" class="btn" target=”_blank”>Download CV</a>
+              <a href="https://drive.google.com/file/d/1nD0dWQs1Y5z9BOCWKTDSWwWQO-zlQByf/view?usp=sharing" class="btn" target=”_blank”>Download CV</a>
             </div>
           </div>
             <div class="home-img">
