--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -116,6 +116,13 @@
                       <p>Give real-time Weather Data using API integration,Location-based Forecasts using GPS location entry</p>
                       <a href="https://github.com/Shubhamchan/Weatherapp.git" target=”_blank” ><i class='bx bxl-github shubham'></i></a>
                   </div>
+                    <div class="project-item">
+                    <img src="./assets/register.png" alt="">
+                      <h2>Quiz-Application</h2>
+                      <p>Created a Quiz-applcation Website using  user authentication, timed quizzes, and dynamic score tracking using MongoDB, Express, React, and Node.js.
+                        Implemented JWT-based authentication to manage secure login and user roles.</p>
+                      <a href="https://github.com/Shubhamchan/Quiz-Application.git" target=”_blank”><i class='bx bxl-github shubham'></i></a>
+                  </div>
                </div>
           </div>
         </section>
